Fix layout issues

--- a/components/core/ShareBtns/ShareBtns.module.css
+++ b/components/core/ShareBtns/ShareBtns.module.css
@@ -3,6 +3,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    flex-wrap: wrap;
 }
 
 .btnList li {
