--- a/components/widgets/ToolsListWidget/ToolsListEntry/ToolsListEntry.module.css
+++ b/components/widgets/ToolsListWidget/ToolsListEntry/ToolsListEntry.module.css
@@ -24,7 +24,6 @@
     margin: 0 0 0 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
     padding: 0 10px 0 0;
 }
 
